tests/paczka1/small_fuzzy/37132029.err
Error in line 2: 9c5OaP54u S140 32,6
Error in line 9: S140 A939 42,5
Error in line 8: 9c5OaP54u S681 70,1
